// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard: Introduction Css renders 1`] = `
<Fragment>
  <h3
    id="css"
  >
    CSS
  </h3>
  <p>
    Copy-paste the stylesheet 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;link&gt;
    </PrismCode>
     into your 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;head&gt;
    </PrismCode>
     before all other stylesheets to load our CSS.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <link
      href="https://design.TESTBRAND.com/TEST/styles/dg-style.css"
      rel="stylesheet"
    />
    <link
      href="https://design.TESTBRAND.com/TEST/styles/dg-dashboard.css"
      rel="stylesheet"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction JavaScript renders 1`] = `
<Fragment>
  <h3
    id="javascript"
  >
    JavaScript
  </h3>
  <p>
    The dashboard theme requires a separate script to run properly. So add the dashboard script below the 
    <Property
      value="scripts"
    />
     at the bottom of your 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;body&gt;
    </PrismCode>
     tag like this:
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <script
      src="https://design.TESTBRAND.com/TEST/scripts/dg.js"
    />
    <script
      src="https://design.TESTBRAND.com/TEST/scripts/dg-dashboard.js"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction QuickStart renders 1`] = `
<Fragment>
  <h3
    id="quick-start"
  >
    Quick start
  </h3>
  <p>
    To quickly add the dashboard theme to your project, include the snippets below in your project.
  </p>
</Fragment>
`;

exports[`Dashboard: Introduction renders 1`] = `
<Fragment>
  <h2
    id="introduction"
  >
    Introduction
  </h2>
  <p
    className="lead"
  >
    We are using 
    <a
      href="https://www.chartjs.org/"
      rel="noopener noreferrer"
      target="_blank"
    >
      chart.js
    </a>
     to generate the charts. Our script is mainly just a wrapper around that library to add the correct styling etc.
  </p>
  <p>
    Most options and settings available in the chart.js documentation will be available.
  </p>
  <p>
    For now, the following chart types are available:
  </p>
  <ul>
    <li>
      <code
        className="token string"
      >
        "line"
      </code>
    </li>
    <li>
      <code
        className="token string"
      >
        "bar"/"horizontalBar"
      </code>
    </li>
    <li>
      <code
        className="token string"
      >
        "pie"/"doughnut"
      </code>
    </li>
  </ul>
  <QuickStart />
  <JavaScript />
</Fragment>
`;
